# voxcharta-my-voting-record

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/: FUNDING.yml
.github/workflows/: black.yml  build.yml  linting.yml
voxcharta_my_voting_record/: extract.py  logger.py
