[metadata]
name = voxcharta-my-voting-record
version = attr: voxcharta_my_voting_record.__version__
description = A Python tool to extract information from VoxCharta My Voting Records HTML
long_description = file: README.md
long_description_content_type = text/markdown
license = GNU GPLv3
license_files =
    LICENSE
classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
url = https://github.com/astrochun/voxcharta-my-voting-record
project_urls =
    Tracker = https://github.com/astrochun/voxcharta-my-voting-record/issues
    Source = https://github.com/astrochun/voxcharta-my-voting-record
    Documentation = https://github.com/astrochun/voxcharta-my-voting-record/blob/main/README.md
author = Chun Ly
author_email = astro.chun@gmail.com
maintainer = Chun Ly
maintainer_email = astro.chun@gmail.com

[options]
python_requires = >=3.7, <3.11
zip_safe = False
install_requires =
    pandas >=1.1.5
    beautifulsoup4 >=4.9.3
    Typer>=0.4.0, <1.0.0
    Click==8.0.4
    rich>=12.2.0, <13.0.0
scripts =
    bin/vox_run
